move media used in readme/editor into repository

--- a/assets/editor.html
+++ b/assets/editor.html
@@ -317,7 +317,7 @@
     <header>
         <div id="logocontainer">
             <h1>
-                <img src="https://fonsp.com/img/plutologo1.svg" alt="Pluto.jl" /></h1>
+                <img src="logo.svg" alt="Pluto.jl" /></h1>
             <h2>
                 <span id="printernametitle">/editor</span></h2>
         </div>
