🎭 MIME types for assets

--- a/assets/editor.html
+++ b/assets/editor.html
@@ -10,7 +10,7 @@
     </script>
     <meta name="author" content="Fons van der Plas; Mikołaj Bochenski" />
     <link rel="license" href="https://github.com/fonsp/Pluto.jl/blob/master/LICENSE" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#fff" />
     <meta name="description" content="Pluto.jl notebook" />
 
     <style>
@@ -109,7 +109,7 @@
         #logocontainer {
             margin: 0 auto;
             max-width: 960px;
-            padding-top: 17px;
+            padding-top: 13px;
             padding-left: 20px;
             padding-bottom: 0px;
         }
@@ -306,7 +306,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.0/codemirror.min.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.0/theme/paraiso-light.min.css" /> -->
     <link rel="stylesheet" href="./light.css" />
-    <link rel="stylesheet" href="/customstyle.css" />
+    <link rel="stylesheet" href="/assets/light.css" />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.0/codemirror.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.0/mode/julia/julia.min.js"></script>
@@ -317,7 +317,7 @@
     <header>
         <div id="logocontainer">
             <h1>
-                <img src="logo.svg" alt="Pluto.jl" /></h1>
+                <img src="/assets/logo.svg" alt="Pluto.jl" /></h1>
             <h2>
                 <span id="printernametitle">/editor</span></h2>
         </div>
