--- a/assets/editor.html
+++ b/assets/editor.html
@@ -147,14 +147,14 @@
             font-weight: 400;
         }
 
-        header.disconnected {
+        body.disconnected>header {
             background-color: rgba(255, 169, 114, 0.56);
             position: fixed;
             backdrop-filter: blur(10px);
             -webkit-backdrop-filter: blur(10px);
         }
 
-        .disconnected>#logocontainer:after {
+        body.disconnected>header>#logocontainer:after {
             content: "NOT CONNECTED";
             font-family: 'Roboto Mono';
             text-align: right;
@@ -163,6 +163,15 @@
         }
 
         /* MAIN */
+
+        preamble{
+            display: block;
+            position: relative;
+        }
+
+        body.loading>main>preamble>button {
+            opacity: 0%;
+        }
 
         cell {
             display: block;
@@ -248,6 +257,10 @@
             pointer-events: none;
         }
 
+        button.runall>span::after {
+            content: "Run all ▶▶";
+        }
+
         button.addcell>span::after {
             content: "+";
         }
@@ -322,6 +335,7 @@
             }
 
             header,
+            preamble>button,
             cell>button,
             cellinput>button,
             clickshoulder {
@@ -357,7 +371,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.0/addon/display/placeholder.min.js"></script>
 </head>
 
-<body class="no-MαθJax">
+<body class="loading no-MαθJax">
     <header>
         <div id="logocontainer">
             <h1>
@@ -368,15 +382,18 @@
     </header>
 
     <main>
+        <preamble>
+            <button class="runall" title="Run all"><span></span></button>
+        </preamble>
         <notebook>
         </notebook>
         <dropruler></dropruler>
-        <confirmationdialog>
+        <!-- <confirmationdialog>
             <span id="question"></span>
             <button id="yes"><span></span></button>
             <span id="optionsep"></span>
             <button id="no"><span></span></button>
-        </confirmationdialog>
+        </confirmationdialog> -->
         <template id="celltemplate">
             <cell>
                 <clickshoulder draggable="true" title="Drag to move. Click output to hide code."></clickshoulder>
@@ -406,10 +423,14 @@
             function updateLocalNotebookName(newName) {
                 notebookName = newName
                 document.querySelector("#printernametitle").innerText = newName;
+
+                fileName = newName.split("/").pop().split("\\").pop()
+                cuteName = "🎈 " + fileName + " ⚡ Pluto.jl ⚡"
+                document.title = cuteName
             }
 
             function startDisconnectedBanner() {
-                document.querySelector("header").classList.add("disconnected")
+                document.body.classList.add("disconnected")
                 document.querySelector("meta[name=theme-color]").content = "#DEAF91"
 
                 setTimeout(() => {
@@ -417,7 +438,7 @@
                         if (psocket.readyState != WebSocket.OPEN) {
                             startDisconnectedBanner()
                         } else {
-                            document.querySelector("header").classList.remove("disconnected")
+                            document.body.classList.remove("disconnected")
                             document.querySelector("meta[name=theme-color]").content = "#fff"
                         }
                     }, () => {
@@ -668,6 +689,13 @@
                 send("changecell", { code: newCode }, uuid)
             }
 
+            function requestRunAllRemoteCells() {
+                send("runall", {})
+            }
+            document.querySelector("preamble>button.runall").onclick = (e) => {
+                requestRunAllRemoteCells()
+            }
+
             // Indexing works as if a new cell is added.
             // e.g. if the third cell (at js-index 2) of [0, 1, 2, 3, 4]
             // is moved to the end, that would be new js-index = 5
@@ -851,6 +879,10 @@
                     // on socket success
                     // getAllRemoteNotebooks()
                     getAllRemoteCells(console.warn, console.log)
+                    // TODO: we should when exactly this happens
+                    setTimeout(() => {
+                        document.body.classList.remove("loading")
+                    }, 3000)
                 })
             }, startDisconnectedBanner)
 
