🏃‍♀️ List running sessions

--- a/assets/editor.html
+++ b/assets/editor.html
@@ -379,8 +379,8 @@
 <body class="loading no-MαθJax">
     <header>
         <div id="logocontainer">
-            <h1>
-                <img src="/assets/logo.svg" alt="Pluto.jl" /></h1>
+            <a href="/"><h1>
+                <img src="/assets/logo.svg" alt="Pluto.jl" /></h1></a>
             <h2>
                 <span id="printernametitle">Loading...</span></h2>
         </div>
