--- a/assets/editor.html
+++ b/assets/editor.html
@@ -166,7 +166,7 @@
         /* MAIN */
 
         preamble {
-            display: none;
+            display: block;
             position: relative;
         }
 
